add get involved page

--- a/advocacy-and-awareness-creation.html
+++ b/advocacy-and-awareness-creation.html
@@ -41,7 +41,7 @@
             <a class="nav-item nav-link" href="#">Who we are</a>
             <a class="nav-item nav-link" href="#">What we do</a>
             <a class="nav-item nav-link" href="#">Programmes</a>
-            <a class="nav-item nav-link" href="volunteering.html">Volunteering</a>
+            <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
             <a class="nav-item nav-link" href="#">News</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
@@ -63,7 +63,7 @@
             </li>
             <li><a href="#">What we do</a></li>
             <li><a href="#">Programmes</a></li>
-            <li><a href="volunteering.html">Volunteering</a></li>
+            <li><a href="get-involved.html">Get involved</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -126,7 +126,7 @@
           <div class="footer-heading">Success stories</div>
         </div>
         <div>
-          <div class="footer-heading">Volunteering</div>
+          <div class="footer-heading">Get involved</div>
         </div>
         <div>
           <div class="footer-heading">Contact</div>
