--- a/get-involved.html
+++ b/get-involved.html
@@ -12,7 +12,7 @@
     <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
     <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
   </head>
-  <body id="founders-message">
+  <body>
 
     <div class="navbar-top">
       <div class="container">
@@ -45,7 +45,7 @@
               <i class="fas fa-caret-down"></i>
             </span>
             <a class="nav-item nav-link" href="#">Success stories</a>
-            <a class="nav-item nav-link" href="volunteering.html">Volunteering</a>
+            <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -68,7 +68,7 @@
               </div>
             </li>
             <li><a href="success-stories.html">Success stories</a></li>
-            <li><a href="volunteering.html">Volunteering</a></li>
+            <li><a href="get-involved.html">Get involved</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -84,12 +84,89 @@
 
     <div id="founders-message-title" class="header secondary-bg">
       <div class="container">
-        <h1>Volunteering</h1>
+        <h1>Get involved</h1>
       </div>
     </div>
 
     <div class="container section">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget nullam non. Donec et odio pellentesque diam. Et leo duis ut diam quam. Dui vivamus arcu felis bibendum ut tristique et. Scelerisque viverra mauris in aliquam sem. Amet volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Tellus integer feugiat scelerisque varius. Pharetra pharetra massa massa ultricies mi quis hendrerit. Luctus accumsan tortor posuere ac ut consequat semper. Pellentesque nec nam aliquam sem et. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
+      <h3 style="margin-bottom:25px;">Volunteering with YSMF</h3>
+      <p>Young Strong Mothers Foundation (YSMF) stands as a home of hope, solutions and inspiration for vulnerable teens and young mothers aged 11 to 24. We have various programs which give them an opportunity to rebuild their lost dreams and become strong women.</p>
+      <p>YSMF welcomes individuals and organizations who want to join our effort through investing their time, skills or resources to give a second chance to the teen and young mothers registered in YSMF. These are unpaid volunteers positions, 2-10 hours, 2-6 month, rural and urban areas. We need volunteers for various assignments including:</p>
+
+      <ul>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;"></i>
+            <h4 style="margin-bottom:10px;">Psychological counselling and motivation</h4>
+          </div>
+          <p>Teens and young mothers face many challenges beside their age. Living without family, social or government support and yet have no idea of parenthood, have no educations or skills to be employed or self employed. All these and more, make them live under stress, fear, shame and trauma. Psychological counselling and motivation talks help them feel welcomed and ready to start again. That is why we are looking for a psychological counsellors to invest his/her time and skills to offer this support so that teens and young mothers can welcome the opportunities YSMF is finding for them with clear mind.</p>
+        </li>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;"></i>
+            <h4 style="margin-bottom:10px;">Training on new handmade skills</h4>
+          </div>
+          <p>Teens and young mothers needs various skills which take short period of time and yet can help them gain skills for employment, self employed and business to help them create a source of income to support their children and their basic needs. Apart from tailoring skills, we need more handmade skills to help them stand on their own.</p>
+        </li>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;"></i>
+            <h4 style="margin-bottom:10px;">Design and media</h4>
+          </div>
+          <p>YSMF is seeking for design and media volunteers who can help us with website maintenance and data updating, brochure and flyer graphic design, social media set up, impact report graphic design and marketing strategy.</p>
+        </li>
+      </ul>
+
+      <p>If you are interested and have the skills mentioned or any skills that are suitable for teens and young mothers, please apply by filling the form below.</p>
+
+      <div id="contact">
+        <div class="container">
+          <form 
+            style="grid-column:1/13"
+            class="primary-bg contact-form"
+            action="http://www.formpocket.com/f/2nnX1mKwQ"
+            method="post"
+            novalidate>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input name="name" type="text" class="form-control" id="name" autocomplete="off">
+            </div>
+
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input name="email" type="email" class="form-control" id="email" autocomplete="off">
+            </div>
+
+            <div class="form-group">
+              <label for="phone">Phone number</label>
+              <input name="phone" type="text" class="form-control" id="phone" autocomplete="off">
+            </div>
+
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea name="message" class="form-control" id="message" rows="5" autocomplete="off"></textarea>
+            </div>
+
+            <div class="popover fade show bs-popover-bottom" id="popover">
+              <div class="arrow"></div>
+              <div class="popover-body">
+                <i class="fas fa-exclamation-triangle" aria-hidden="true"></i>
+                <span class="popover-message"></span>
+              </div>
+            </div>
+
+            <button type="submit" class="btn btn-form">Send</button>
+          </form>
+        </div>
+      </div>
+
+      <h3 style="margin-bottom:25px;margin-top:50px;">Sponsor a teen, young mother or their children to join school, vocational training institute or college</h3>
+
+      <p>Teen and young mothers are school dropouts. Most of them didn’t complete their secondary studies and have been kicked out of school. Your donation, contribution and in-kind support will give a second chance to receive an education. <a href="contact.html">Contact us</a> to take action.</p>
+
+      <h3 style="margin-bottom:25px;margin-top:50px;">Contributing education materials for adolescent girls, young mothers and their children in schools, vocational institutes and colleges</h3>
+
+      <p>1 pen, pencil, book, school bag or uniform can help a girl stay in class.</p>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
@@ -107,7 +184,7 @@
           <div class="footer-heading">Success stories</div>
         </div>
         <div>
-          <div class="footer-heading">Volunteering</div>
+          <div class="footer-heading">Get involved</div>
         </div>
         <div>
           <div class="footer-heading">Contact</div>
@@ -128,6 +205,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="js/acceptTerms.js"></script>
     <script src="js/desktop-navbar.js"></script>
     <script src="js/mobile-navbar.js"></script>
 
