--- a/impact.html
+++ b/impact.html
@@ -45,7 +45,7 @@
               <i class="fas fa-caret-down"></i>
             </span>
             <a class="nav-item nav-link" href="#">Success stories</a>
-            <a class="nav-item nav-link" href="volunteering.html">Volunteering</a>
+            <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -68,7 +68,7 @@
               </div>
             </li>
             <li><a href="success-stories.html">Success stories</a></li>
-            <li><a href="volunteering.html">Volunteering</a></li>
+            <li><a href="get-involved.html">Get involved</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -107,7 +107,7 @@
           <div class="footer-heading">Success stories</div>
         </div>
         <div>
-          <div class="footer-heading">Volunteering</div>
+          <div class="footer-heading">Get involved</div>
         </div>
         <div>
           <div class="footer-heading">Contact</div>
