--- a/who-we-are.html
+++ b/who-we-are.html
@@ -89,7 +89,14 @@
     </div>
 
     <div class="container section">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget nullam non. Donec et odio pellentesque diam. Et leo duis ut diam quam. Dui vivamus arcu felis bibendum ut tristique et. Scelerisque viverra mauris in aliquam sem. Amet volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Tellus integer feugiat scelerisque varius. Pharetra pharetra massa massa ultricies mi quis hendrerit. Luctus accumsan tortor posuere ac ut consequat semper. Pellentesque nec nam aliquam sem et. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
+      
+      <p style="background:#f5f5f5;color:#3c1053;padding:50px;margin-bottom:25px;font-weight:bold;">
+        We are a home of hope and inspiration for vulnerable young mothers and their children and stand as a bridge, connecting them with opportunities to resilient solutions to achieve desired life destinies.
+      </p>
+
+      <p>Young Strong Mothers Foundation (YSMF) is registered as a non-governmental, non-profit and non partisan organization. It was officially registered in February 9, 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality.</p>
+
+      <p>YSMF was founded by Ms. Jackie Leonard Bomboma, a survivor of teenage pregnancy, together with her daughter Rose Samwel Mayunga with the aim of using their rough past and struggle to find opportunities and achievement stories as a weapon to inspire, empower, motivate, advocate and fight against young mother’s discrimination and stigmas to restore their pathways to desired human life destinies.</p>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
