--- a/advocacy-and-awareness-creation.html
+++ b/advocacy-and-awareness-creation.html
@@ -118,18 +118,15 @@
           <div><a href="who-we-are.html">Who we are</a></div>
           <div><a href="what-we-do.html">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
-          <div><a href="#">Impact</a></div>
+          <div><a href="#">Our impact</a></div>
           <div><a href="founders-message.html">Founder's message</a></div>
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading">Success stories</div>
+          <div class="footer-heading"><a href="get-involved.html">Get involved</a></div>
         </div>
         <div>
-          <div class="footer-heading">Get involved</div>
-        </div>
-        <div>
-          <div class="footer-heading">Contact</div>
+          <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
         <div><img src="images/logo-grande-gray.svg"></div>
       </div>
