--- a/impact.html
+++ b/impact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Our History - YSMF</title>
+    <title>Our Impact - YSMF</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -44,7 +44,6 @@
               <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="#">Success stories</a>
             <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
@@ -62,12 +61,11 @@
                 <a class="dropdown-item" href="who-we-are.html">Who we are</a>
                 <a class="dropdown-item" href="what-we-do.html">What we do</a>
                 <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
-                <a class="dropdown-item" href="impact.html">Impact</a>
+                <a class="dropdown-item" href="impact.html">Our impact</a>
                 <a class="dropdown-item" href="founders-message.html">Founder's message</a>
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
-            <li><a href="success-stories.html">Success stories</a></li>
             <li><a href="get-involved.html">Get involved</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -79,17 +77,22 @@
       <a href="founders-message.html">Founder's message</a>
       <a href="our-history.html">Our history</a>
       <a href="problem-statement.html">Problem statement</a>
+      <a href="impact.html">Our impact</a>
       <a href="partners.html">Our partners</a>
     </div>
 
     <div id="founders-message-title" class="header secondary-bg">
       <div class="container">
-        <h1>Impact</h1>
+        <h1>Our impact</h1>
       </div>
     </div>
 
     <div class="container section">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget nullam non. Donec et odio pellentesque diam. Et leo duis ut diam quam. Dui vivamus arcu felis bibendum ut tristique et. Scelerisque viverra mauris in aliquam sem. Amet volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Tellus integer feugiat scelerisque varius. Pharetra pharetra massa massa ultricies mi quis hendrerit. Luctus accumsan tortor posuere ac ut consequat semper. Pellentesque nec nam aliquam sem et. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
+      <p>YSMF managed to reach and support 760 teen and young mothers age 11 to 24 in 8 wards of Morogoro Municipal from 2015 to 2019.</p>
+      <p>We have managed to reconnect families and young mothers who were kicked out of their homes through conducting home visits with the aim of educating the parents and care givers the advantages of giving a second chance to their girl and disadvantages of not investing on them.</p>
+      <p>YSMF managed to advocate for partners and stakeholders to invest on young mothers by funding our projects, offer physical and emotional support and offering second chance opportunities to colleges and employment.</p>
+      <p>134 young mothers graduated from vocational institutes and are now enjoying a better and respectful life, earn a decent payments and contributing to community development.</p>
+      <p>YSMF managed to buy 10 acres of land at Kiegea B, located in 15kms from Dodoma main road where the home of hope and inspiration for resilient solutions for young mothers will develop.</p>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
@@ -99,18 +102,15 @@
           <div><a href="who-we-are.html">Who we are</a></div>
           <div><a href="what-we-do.html">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
-          <div><a href="#">Impact</a></div>
+          <div><a href="#">Our impact</a></div>
           <div><a href="founders-message.html">Founder's message</a></div>
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading">Success stories</div>
+          <div class="footer-heading"><a href="get-involved.html">Get involved</a></div>
         </div>
         <div>
-          <div class="footer-heading">Get involved</div>
-        </div>
-        <div>
-          <div class="footer-heading">Contact</div>
+          <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
         <div><img src="images/logo-grande-gray.svg"></div>
       </div>
