--- a/problem-statement.html
+++ b/problem-statement.html
@@ -44,7 +44,6 @@
               <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="#">Success stories</a>
             <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
@@ -62,12 +61,11 @@
                 <a class="dropdown-item" href="who-we-are.html">Who we are</a>
                 <a class="dropdown-item" href="what-we-do.html">What we do</a>
                 <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
-                <a class="dropdown-item" href="impact.html">Impact</a>
+                <a class="dropdown-item" href="impact.html">Our impact</a>
                 <a class="dropdown-item" href="founders-message.html">Founder's message</a>
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
-            <li><a href="success-stories.html">Success stories</a></li>
             <li><a href="get-involved.html">Get involved</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -79,6 +77,7 @@
       <a href="founders-message.html">Founder's message</a>
       <a href="our-history.html">Our history</a>
       <a href="problem-statement.html">Problem statement</a>
+      <a href="impact.html">Our impact</a>
       <a href="partners.html">Our partners</a>
     </div>
 
@@ -91,13 +90,17 @@
     <div class="container section">
       <p>Teenage pregnancies are rampant countrywide. The circumstance is partly being attributed to the socio-economic hardships experienced by the vulnerable groups in Tanzania and marginalized cultural and traditional communities. Through teenage pregnancies, young girls dropped-out from schools which led to enhancement of uneducated and unskilled young women to the population.</p>
 
-      <p>Teenage mothers' discrimination and abandonment is a known fact that unfortunately causes endless chain of poverty from mother to a child as well as families. It also contribute a lot in the spread of HIV/AIDS pandemic as many teenage mothers live without family, economic or social support to help them rebuild their dreams, create a better future for themselves and their children whereby ended up taking sexual work as part of their income generation survival vocation.</p>
+      <p>Teenage mothers discrimination and abandonment is a known fact that unfortunately causes endless chain of poverty from mother to a child as well as families and society. It also contribute a lot in the spread of HIV/AIDS pandemic as many teenage mothers live without family, economic or social support to help them rebuild their dreams to life destinies of their choice for themselves and their children whereby ending up taking sexual work as  a substitute source  of their income to keep life going and surviving while exposing themselves to health risks.</p>
 
-      <p>On being found pregnant, most Tanzanian families and men responsible do expel these girls and denied them financial and economic support. After giving birth, these girls and their children lack parental skills, basic needs to care for their children, sometimes they opted to abandoning their children in the gutters, which led to increase of street children who might end up becoming teenage mothers in the future as well.</p>
+      <p>Most Tanzanian pregnant girl’s families are poor ,headed by women and grandmothers and while men responsible on partner girls being found pregnantand some families as well do expel these girls and deny them financial and economic support. After giving birth, these girls and their children lack parental skills, basic needs to care for their children, sometimes they opt to abandoning their children in the gutters, which lead to increase of street children who might end up becoming teenage mothers in the future as well.</p>
 
-      <p>The young mothers face negative stigmatization, which has strong impact on their psychological wellbeing, leading to a life of fear, shame, guilty and helplessness. The affected young mothers end up leaving their family home and opting to go alone or staying with groups in the streets whereby they are involved in various kinds of illegal activities, which includes drug abuse, joining illicit groups, prostitution and substance abuse. They find themselves in unfamiliar territory of parenting with no skills to enable them join the competitive job market, being unemployed leave them hopeless and vulnerable.</p>
+      <p>The young mothers face negative stigmatization, which has strong impact on their psychological wellbeing, leading to a life of fear, shame, guilty and helplessness. Some affected and unsupported  young mothers end up leaving their family home and opting to go alone or staying with groups in the streets whereby they are involved in various kinds of illegal activities, which includes drug abuse, joining illicit groups, prostitution and substance abuse. They find themselves in unfamiliar territory of parenting with no skills to enable them join the better paying job market, being unemployed leave them hopeless and vulnerable.</p>
 
-      <p>To be a young mother is hard, it is like walking in darkness on a rainy stormy day in a new place you have never been before. It is a fact that Tanzania lacks institutions caring for teenage mothers, their children and other vulnerable girls so that they can grow into becoming responsible citizens and avoid crisis of rampant HIV/AIDS spread.</p>
+      <p>To be a young mother is hard, it is like walking in darkness on a rainy stormy day in a new place you have never been before. It is a fact that Tanzania lacks appropriate  institutions and mechanisms to address  the needs of  teenage mothers, their children and other vulnerable girls so that they can grow into becoming responsible citizens and avoid crisis of rampant HIV/AIDS spread in an effort to achieve Sustainable Development Goals.</p>
+
+      <p>“On the one hand, teen and young mothers below 18 years age are children who need education support, love,protection while on the other hand respectively young mothers 19-24 years age need   employable/job skills in order to prevent  national crisis such as new spread of HIV/AIDS, increasing of street children, High number of lowly educated, unskilled and dependent single women, high rate of gender based violence and continuously stay in poverty cycle trap from generation to generation”</p>
+
+      <p>YSMF identifies these young mothers, register them and search various opportunities to connect with vulnerable young mothers and their children. As a Founder, once asked herself “Having experienced the walk on the road most of young mothers are walking today, I have a clear understanding of what testthey are going through, and sometimes I ask myself where could I and my daughter be today if I was not supported by others contribution to our lives?”</p>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
@@ -107,18 +110,15 @@
           <div><a href="who-we-are.html">Who we are</a></div>
           <div><a href="what-we-do.html">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
-          <div><a href="#">Impact</a></div>
+          <div><a href="#">Our impact</a></div>
           <div><a href="founders-message.html">Founder's message</a></div>
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading">Success stories</div>
+          <div class="footer-heading"><a href="get-involved.html">Get involved</a></div>
         </div>
         <div>
-          <div class="footer-heading">Get involved</div>
-        </div>
-        <div>
-          <div class="footer-heading">Contact</div>
+          <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
         <div><img src="images/logo-grande-gray.svg"></div>
       </div>
