--- a/our-history.html
+++ b/our-history.html
@@ -44,7 +44,6 @@
               <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="#">Success stories</a>
             <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
@@ -62,12 +61,11 @@
                 <a class="dropdown-item" href="who-we-are.html">Who we are</a>
                 <a class="dropdown-item" href="what-we-do.html">What we do</a>
                 <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
-                <a class="dropdown-item" href="impact.html">Impact</a>
+                <a class="dropdown-item" href="impact.html">Our impact</a>
                 <a class="dropdown-item" href="founders-message.html">Founder's message</a>
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
-            <li><a href="success-stories.html">Success stories</a></li>
             <li><a href="get-involved.html">Get involved</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -79,6 +77,7 @@
       <a href="founders-message.html">Founder's message</a>
       <a href="our-history.html">Our history</a>
       <a href="problem-statement.html">Problem statement</a>
+      <a href="impact.html">Our impact</a>
       <a href="partners.html">Our partners</a>
     </div>
 
@@ -111,18 +110,15 @@
           <div><a href="who-we-are.html">Who we are</a></div>
           <div><a href="what-we-do.html">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
-          <div><a href="#">Impact</a></div>
+          <div><a href="#">Our impact</a></div>
           <div><a href="founders-message.html">Founder's message</a></div>
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading">Success stories</div>
+          <div class="footer-heading"><a href="get-involved.html">Get involved</a></div>
         </div>
         <div>
-          <div class="footer-heading">Get involved</div>
-        </div>
-        <div>
-          <div class="footer-heading">Contact</div>
+          <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
         <div><img src="images/logo-grande-gray.svg"></div>
       </div>
