--- a/what-we-do.html
+++ b/what-we-do.html
@@ -88,7 +88,41 @@
     </div>
 
     <div class="container section">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget nullam non. Donec et odio pellentesque diam. Et leo duis ut diam quam. Dui vivamus arcu felis bibendum ut tristique et. Scelerisque viverra mauris in aliquam sem. Amet volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Tellus integer feugiat scelerisque varius. Pharetra pharetra massa massa ultricies mi quis hendrerit. Luctus accumsan tortor posuere ac ut consequat semper. Pellentesque nec nam aliquam sem et. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
+      <p>We mainly focus on:</p>
+
+      <ul>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+            <h4 style="margin-bottom:25px;line-height:28px;">Advocacy and awareness on gender based violence and women’s rights</h4>
+          </div>
+        </li>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+            <h4 style="margin-bottom:25px;line-height:28px;">Education empowerment mainly in vocational skills</h4>
+          </div>
+        </li>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+            <h4 style="margin-bottom:25px;line-height:28px;">Economic empowerment mainly in entrepreneurship  skills</h4>
+          </div>
+        </li>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+            <h4 style="margin-bottom:25px;line-height:28px;">Promoting access to right information for awareness on health issues mainly focusing on mental health support, counselling, and sexual and reproductive health</h4>
+          </div>
+        </li>
+        <li>
+          <div style="display:flex;margin-left:-25px;color:#3c1053;">
+            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+            <h4 style="margin-bottom:25px;line-height:28px;">Child program mainly focusing on child care for children of young mothers</h4>
+          </div>
+        </li>
+      </ul>
+
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
