--- a/contact.html
+++ b/contact.html
@@ -90,13 +90,14 @@
       <div class="contact" style="padding:50px;background-color:#2e3e4a;">
         <h2 class="contact-title">Morogoro - Office</h2>
 
-        <div class="contact-text-white" style="margin-top:20px;">
+        <div class="contact-text-white" style="margin-top:25px;">
           <div style="margin-bottom:5px;">
             <i class="fas fa-map-marker-alt" style="margin-right:10px;"></i>
             <b>Address</b>
           </div>
           <div class="contact-text">
-            <div>Po box 2416 Tushikamane Center</div>
+            <div>Kihonda Kaskazini Opposite Youth Mission</div>
+            <div>Po Box 2416</div>
             <div>Morogoro</div>
             <div>Tanzania</div>
           </div>
@@ -106,20 +107,17 @@
           Young Strong Mothers Foundation (YSMF), PO Box 2416, Kihonda Along Dodoma Road At Pepsi Street Morogoro
         </div> -->
 
-        <div class="contact-text-white" style="margin-top:20px;">
+        <div class="contact-text-white" style="margin-top:25px;">
           <div style="margin-bottom:5px;">
             <i class="fas fa-phone" style="margin-right:10px;"></i>
-            <b>Phones</b>
+            <b>Phone</b>
           </div>
           <div>
-            <a href="tel:+255 737 235 137" class="contact-text">+255 737 235 137</a>
-          </div>
-          <div class="contact-text">
-            <a href="tel:+255 754 200 102" class="contact-text">+255 754 200 102</a>
+            <a href="tel:+255 746 200 102" class="contact-text">+255 746 200 102</a>
           </div>
         </div>
 
-        <div style="margin-top:20px;">
+        <div style="margin-top:25px;">
           <div class="contact-text-white" style="margin-bottom:5px;">
             <i class="fas fa-envelope" style="margin-right:10px;"></i>
             <b>Email</b>
@@ -129,10 +127,25 @@
           </div>
         </div>
 
+        <div style="margin-top:25px;">
+          <div class="contact-text-white" style="margin-bottom:5px;">
+            <b>Main contact person</b>
+          </div>
+          <div class="contact-text">
+            Jackie Leonard Bomboma
+          </div>
+          <div class="contact-text">
+            +255 675 250 625
+          </div>
+          <div class="contact-text">
+            jackiebomboma@gmail.com
+          </div>
+        </div>
+
       </div>
-      <div class="map" style="padding:0px;background-color:#fff;">
+<!--       <div class="map" style="padding:0px;background-color:#fff;">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4000.3535836327121!2d37.67985203636862!3d-6.8234847217841565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185a5da79ddb21d7%3A0x655ccbb9907e393f!2sTushikamane%20Center!5e1!3m2!1ses!2ses!4v1577718064445!5m2!1ses!2ses" width="100%" height="100%" frameborder="0" style="border:0;display:block;min-height:400px;" allowfullscreen=""></iframe>
-      </div>
+      </div> -->
     </div>
 
     <div id="contact">
