--- a/index.html
+++ b/index.html
@@ -97,19 +97,25 @@
 
     <div id="about" class="container">
       <h1 style="text-align:center;margin-bottom:30px;">About us</h1>
-      <p>Young Strong Mothers Foundation (YSMF) was registered as a Non Governmental, non-profit and non partisan organization, which was officially registered on 09th February 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality. So far the organization has registered 576 vulnerable teenage mothers from Morogoro Municipal wards alone where most projects and activities are implemented. It is an organization that comprises of six individual founder members under the tutelage of Ms. Jackie Leonard Bomboma.</p>
+      <p style="background:#f5f5f5;color:#3c1053;padding:50px;margin-bottom:25px;font-weight:bold;">
+        We are a home of hope and inspiration for vulnerable young mothers and their children and stand as a bridge, connecting them with opportunities to resilient solutions to achieve desired life destinies.
+      </p>
+
+      <p style="margin-bottom:20px;">Young Strong Mothers Foundation (YSMF) is registered as a non-governmental, non-profit and non partisan organization. It was officially registered in February 9, 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality.</p>
+
+      <p>YSMF was founded by Ms. Jackie Leonard Bomboma, a survivor of teenage pregnancy, together with her daughter Rose Samwel Mayunga with the aim of using their rough past and struggle to find opportunities and achievement stories as a weapon to inspire, empower, motivate, advocate and fight against young mother’s discrimination and stigmas to restore their pathways to desired human life destinies.</p>
     </div>
 
     <div class="vision-container">
       <div id="vision" class="container">
         <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
-        <p>To become a home of hope, inspirations and solutions to teen mothers, girl child and women in Tanzania mainland.</p>
+        <p>To provide an opportunity for vulnerable young mothers and their children to address their health, social, education, legal and financial needs.</p>
       </div>
     </div>
 
     <div id="mission" class="container">
       <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
-      <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
+      <p>To become a home of hope, inspiration and solutions to vulnerable girls, teen mothers and their children within mainland Tanzania.</p>
     </div>
 
     <div id="contact">
