--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>Young Strong Mothers Foundation (YSMF)</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Nuestra motivación es la promoción del bienestar psicológico y la calidad de vida.">
+    <meta name="description" content="">
     <link rel="icon" href="images/favicon_32.png" sizes="32x32" type="image/png"> 
     <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
