--- a/contact.html
+++ b/contact.html
@@ -143,9 +143,9 @@
         </div>
 
       </div>
-<!--       <div class="map" style="padding:0px;background-color:#fff;">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4000.3535836327121!2d37.67985203636862!3d-6.8234847217841565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185a5da79ddb21d7%3A0x655ccbb9907e393f!2sTushikamane%20Center!5e1!3m2!1ses!2ses!4v1577718064445!5m2!1ses!2ses" width="100%" height="100%" frameborder="0" style="border:0;display:block;min-height:400px;" allowfullscreen=""></iframe>
-      </div> -->
+      <div class="map" style="padding:0px;background-color:#fff;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5035.2131895478215!2d37.64663985093233!3d-6.75339009509419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185a5fe7f885be4f%3A0xbf7f7b1d2ffbe205!2sZahanati%20Kihonda%20Kaskazini!5e1!3m2!1sen!2ses!4v1580323579857!5m2!1sen!2ses" width="100%" height="100%" frameborder="0" style="border:0;display:block;min-height:400px;" allowfullscreen=""></iframe>
+      </div>
     </div>
 
     <div id="contact">
