add founders messsage preview to home page

--- a/index.html
+++ b/index.html
@@ -96,14 +96,13 @@
     </div>
 
     <div id="about" class="container">
-      <h1 style="text-align:center;margin-bottom:30px;">About us</h1>
-      <p style="background:#f5f5f5;color:#3c1053;padding:50px;margin-bottom:25px;font-weight:bold;">
-        We are a home of hope and inspiration for vulnerable young mothers and their children and stand as a bridge, connecting them with opportunities to resilient solutions to achieve desired life destinies.
-      </p>
+      <h1 style="text-align:center;margin-bottom:30px;">Founder's message</h1>
 
-      <p style="margin-bottom:20px;">Young Strong Mothers Foundation (YSMF) is registered as a non-governmental, non-profit and non partisan organization. It was officially registered in February 9, 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality.</p>
+      <p id="founders-message-preview" style="margin-bottom:20px;">Imagine a girl, pregnant at the age of 15, denied by the man responsible, kicked out by her family, living on the street without family, social or government support. Having no parenting skills or even idea of motherhood. Having no education or skills to be employed, every where the night finds her, she call it a night. Giving birth alone in the middle of the forest without any medical support – and afterwards, living as a street teenage mother with her child. She then works as a maid in many homes. Sexually abused many times, denied food, beaten, discriminated and denied many opportunities. That was my life 17 years ago have just been denied by the man responsible just like the other men do who impregnate teenage mothers.</p>
 
-      <p>YSMF was founded by Ms. Jackie Leonard Bomboma, a survivor of teenage pregnancy, together with her daughter Rose Samwel Mayunga with the aim of using their rough past and struggle to find opportunities and achievement stories as a weapon to inspire, empower, motivate, advocate and fight against young mother’s discrimination and stigmas to restore their pathways to desired human life destinies.</p>
+      <div style="text-align: center;">
+        <a href="founders-message.html" class="btn">Continue reading the founder's message</a>
+      </div>
     </div>
 
     <div class="vision-container">
