--- a/who-we-are.html
+++ b/who-we-are.html
@@ -96,6 +96,56 @@
       <p>Young Strong Mothers Foundation (YSMF) is registered as a non-governmental, non-profit and non partisan organization. It was officially registered in February 9, 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality.</p>
 
       <p>YSMF was founded by Ms. Jackie Leonard Bomboma, a survivor of teenage pregnancy, together with her daughter Rose Samwel Mayunga with the aim of using their rough past and struggle to find opportunities and achievement stories as a weapon to inspire, empower, motivate, advocate and fight against young mother’s discrimination and stigmas to restore their pathways to desired human life destinies.</p>
+
+      <div style="text-align:center;margin:30px 0 50px;">
+        <h2>Our team</h2>
+      </div>      
+
+      <div class="container team-container" style="font-size:18px;color:#777f85;font-weight:400;"> 
+        <div class="team-member-card">
+          <img src="images/avatar_mujer.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Jackie Leonard Bomboma</div>
+            <div class="team-member-title">CEO</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/avatar_mujer.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Name Surname</div>
+            <div class="team-member-title">Role</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/avatar_hombre.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Name Surname</div>
+            <div class="team-member-title">Role</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/avatar_mujer.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Name Surname</div>
+            <div class="team-member-title">Role</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/avatar_hombre.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Name Surname</div>
+            <div class="team-member-title">Role</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/avatar_mujer.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Name Surname</div>
+            <div class="team-member-title">Role</div>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
