--- a/index.html
+++ b/index.html
@@ -95,7 +95,16 @@
       The home of hope and inspiration
     </div>
 
-    <div id="about" class="container">
+    <div style="background:#f5f5f5;">
+      <div id="about" class="container">
+        <h3 style="margin-bottom:30px;">Keynote speech of founder and CEO Jackie Bomboma at the 2019 Segal Family Foundation Annual Meeting</h3>
+        <div class="video-wrapper">
+          <iframe src="https://www.youtube-nocookie.com/embed/uvfRzhPgA8I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+    <div class="container" id="founders-preview">
       <h1 style="text-align:center;margin-bottom:30px;">Founder's message</h1>
 
       <p id="founders-message-preview" style="margin-bottom:20px;">Imagine a girl, pregnant at the age of 15, denied by the man responsible, kicked out by her family, living on the street without family, social or government support. Having no parenting skills or even idea of motherhood. Having no education or skills to be employed, every where the night finds her, she call it a night. Giving birth alone in the middle of the forest without any medical support – and afterwards, living as a street teenage mother with her child. She then works as a maid in many homes. Sexually abused many times, denied food, beaten, discriminated and denied many opportunities. That was my life 17 years ago have just been denied by the man responsible just like the other men do who impregnate teenage mothers.</p>
