add team photos

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -105,45 +105,38 @@
 
       <div class="container team-container" style="font-size:18px;color:#777f85;font-weight:400;"> 
         <div class="team-member-card">
-          <img src="images/avatar_mujer.png">
+          <img src="images/hans.png">
           <div class="team-member-text">
-            <div class="team-member-name">Jackie Leonard Bomboma</div>
-            <div class="team-member-title">CEO</div>
+            <div class="team-member-name">Mr. Hans Mhalila</div>
+            <div class="team-member-title">Board Chair YSMF</div>
           </div>
         </div>
         <div class="team-member-card">
-          <img src="images/avatar_mujer.png">
+          <img src="images/jackie.png">
           <div class="team-member-text">
-            <div class="team-member-name">Name Surname</div>
-            <div class="team-member-title">Role</div>
+            <div class="team-member-name">Ms. Jackie Leonard Bomboma</div>
+            <div class="team-member-title">Secretary of YSMF Board of Directors</div>
           </div>
         </div>
         <div class="team-member-card">
-          <img src="images/avatar_hombre.png">
+          <img src="images/rhoda.png">
           <div class="team-member-text">
-            <div class="team-member-name">Name Surname</div>
-            <div class="team-member-title">Role</div>
+            <div class="team-member-name">Madam Rhoda Mbwana Francis</div>
+            <div class="team-member-title">Board Member of YSMF </div>
           </div>
         </div>
         <div class="team-member-card">
-          <img src="images/avatar_mujer.png">
+          <img src="images/christian.png">
           <div class="team-member-text">
-            <div class="team-member-name">Name Surname</div>
-            <div class="team-member-title">Role</div>
+            <div class="team-member-name">Mr. Christian Sambara</div>
+            <div class="team-member-title">Board Member of YSMF</div>
           </div>
         </div>
         <div class="team-member-card">
-          <img src="images/avatar_hombre.png">
+          <img src="images/rose.png">
           <div class="team-member-text">
-            <div class="team-member-name">Name Surname</div>
-            <div class="team-member-title">Role</div>
-          </div>
-        </div>
-        <div class="team-member-card">
-          <img src="images/avatar_mujer.png">
-          <div class="team-member-text">
-            <div class="team-member-name">Name Surname</div>
-            <div class="team-member-title">Role</div>
+            <div class="team-member-name">Ms. Rose Samwel Mayunga</div>
+            <div class="team-member-title">Board Member of YSMF</div>
           </div>
         </div>
       </div>
