--- a/partners.html
+++ b/partners.html
@@ -97,6 +97,14 @@
           <th>Website</th>
         </tr>
         <tr>
+          <td>Segal Family Foundation</td>
+          <td><a href="https://www.segalfamilyfoundation.org" target="_blank">www.segalfamilyfoundation.org</a></td>
+        </tr>
+        <tr>
+          <td>Hakizetu Tanzania</td>
+          <td><a href="http://hakizetu.org" target="_blank">hakizetu.org</a></td>
+        </tr>
+        <tr>
           <td>Morogoro municipality</td>
           <td>-</td>
         </tr>
