--- a/who-we-are.html
+++ b/who-we-are.html
@@ -108,7 +108,7 @@
           <img src="images/hans.png">
           <div class="team-member-text">
             <div class="team-member-name">Mr. Hans Mhalila</div>
-            <div class="team-member-title">Board Chair YSMF</div>
+            <div class="team-member-title">Board Chair of YSMF</div>
           </div>
         </div>
         <div class="team-member-card">
